--- a/chicken_weight.ipynb
+++ b/chicken_weight.ipynb
@@ -1706,34 +1706,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "a009bee0-4e83-4b29-b8ab-a39b66fca591",
+   "execution_count": 122,
+   "id": "56acce3c-7249-427b-b690-90680616c385",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prob feed # 1 > # 2 :  1 \n",
-      "Prob feed # 1 > # 3 :  0.9999 \n",
-      "Prob feed # 1 > # 4 :  0.9723 \n",
-      "Prob feed # 1 > # 5 :  0.9993 \n",
-      "Prob feed # 1 > # 6 :  0.4135 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "set.seed(43)\n",
-    "for (i in 4:8) {\n",
-    "    p = mean(sample(mod.hier$csim[, 3], N, replace = TRUE) > sample(mod.hier$csim[, i], N, replace = TRUE))\n",
-    "    cat(\"Prob feed # 1 > #\", i-2, \": \", p, \"\\n\")\n",
+    "\n",
+    "theta.mat = matrix(, nrow = N, ncol = 6)\n",
+    "sigma.mat = matrix(, nrow = N, ncol = 6)\n",
+    "z = matrix(, nrow = N, ncol = 6)\n",
+    "\n",
+    "for (i in 3:8) {\n",
+    "    theta.sample = sample(mod.hier$csim[, i], N, replace = TRUE)\n",
+    "    sigma.sample = sample(mod.hier$csim[, 2], N, replace = TRUE)\n",
+    "    z[, i-2] = rnorm(N, mean=theta.sample, sd=sigma.sample)\n",
+    "\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 123,
+   "id": "0a23491b-fc07-4eaa-adab-4638f931bff5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.4739"
+      ],
+      "text/latex": [
+       "0.4739"
+      ],
+      "text/markdown": [
+       "0.4739"
+      ],
+      "text/plain": [
+       "[1] 0.4739"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mean(z[, 1] > z[, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "56acce3c-7249-427b-b690-90680616c385",
+   "id": "ababe0ae-222a-4124-a92e-60c3217f3692",
    "metadata": {},
    "outputs": [],
    "source": []
