--- a/chicken_weight.ipynb
+++ b/chicken_weight.ipynb
@@ -1712,6 +1712,7 @@
    "outputs": [],
    "source": [
     "set.seed(43)\n",
+    "N = 1e4\n",
     "\n",
     "theta.mat = matrix(, nrow = N, ncol = 6)\n",
     "sigma.mat = matrix(, nrow = N, ncol = 6)\n",
@@ -1756,8 +1757,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "ababe0ae-222a-4124-a92e-60c3217f3692",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.9669\n",
+      "[1] 0.884\n",
+      "[1] 0.6922\n",
+      "[1] 0.8084\n",
+      "[1] 0.4739\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (i in 2:6) {\n",
+    "    print(mean(z[, 1] > z[, i]))\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "d3871232-0f48-40d6-86a8-8c19e7c62590",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] 0.5261\n",
+      "[1] 0.9718\n",
+      "[1] 0.893\n",
+      "[1] 0.7206\n",
+      "[1] 0.8256\n"
+     ]
+    }
+   ],
+   "source": [
+    "for (i in 1:5) {\n",
+    "    print(mean(z[, 6] > z[, i]))\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2cf5a85-9e7f-40fd-93ca-eefe03696153",
    "metadata": {},
    "outputs": [],
    "source": []
